[workspace]
members = [
    #"contracts/cw82-tba-base",
    "contracts/cw82-tba-credentials",
    "contracts/cw83-tba-registry",
    "packages/cw-tba",
    #"e2e"
]

resolver = "2"

[workspace.package]
version    = "0.9.0"
edition    = "2021"
repository = ""



[workspace.dependencies]
cosmwasm-std         = { version = "1.5.11", features = ["staking", "stargate" ] }
cosmwasm-schema      = { version = "1.5.11" }
cw-storage-plus      = "1.2.0"

serde                = { version = "1.0.219", features = ["derive"] }
anybuf               = { version = "0.5.2" }

semver                  = "1.0.26"
schemars                = "0.8.22"
thiserror               = "2.0.12"

cw-ownable              = "0.5.1"
cw-utils                = "1.0.3"
cw2                     = "1.1.2"




cw-tba                  = { path = "packages/cw-tba" }
#cw82-tba-base           = { path = "contracts/cw82-tba-base", features = ["library"] }
cw82-tba-credentials    = { path = "contracts/cw82-tba-credentials", features = ["library"] }
cw83-tba-registry       = { path = "contracts/cw83-tba-registry", features = ["library"] }


strum               = { version = "0.27.1" }
strum_macros        = { version = "0.27.1" }


[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
debug            = false
debug-assertions = false
opt-level        = 3