[package]
name       = "e2e"
version    = { workspace = true }
edition    = { workspace = true }
repository = { workspace = true }





[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cosm-orc       = { git = "https://github.com/kromsten/cosm-orc", version="4.1.0" }
cosm-tome      = { git = "https://github.com/kromsten/cosm-tome" }
cosmrs         = { version = "0.16.0", features = ["rpc", "cosmwasm", "grpc", "bip32"] }

serde          = { version = "1.0", default-features = false, features = ["derive"] }
assert_matches = "1.5"
serde_json     = "1.0"
env_logger     = "0.11.3"
test-context   = "0.3.0"
once_cell      = "1.19.0"
rand           = "0.8.5"
async-trait    = "0.1.8"
tokio          = "1.37.0"


hex            = "0.4.3"

cosmwasm-schema      = { workspace = true }
cosmwasm-std         = { workspace = true }
cw-ownable           = { workspace = true }
cw1                  = { workspace = true }
cw2                  = { workspace = true }
cw22                 = { workspace = true }
cw81                 = { workspace = true }
cw82                 = { workspace = true }
cw83                 = { workspace = true }
cw721                = { workspace = true }
cw721-base           = { workspace = true }
cw82-tba-base        = { workspace = true }
cw82-tba-credentials = { workspace = true }
cw83-tba-registry    = { workspace = true }
cw-tba               = { workspace = true }
saa                  = { workspace = true, features = ["native"] }
