[package]
name        = "cw82-credentials"
version     = { workspace = true }
edition     = { workspace = true }
repository  = { workspace = true }
authors     = [ "Kromsten <s@noreply.megarock.labs>" ]
description = "Token Bound Account Credentials"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
archway = ["dep:anybuf"]
stargaze = []
library = []

[dependencies]
semver          = { workspace = true }
thiserror       = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw-ownable      = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
cw22            = { workspace = true }
cw82            = { workspace = true }
cw83            = { workspace = true }
cw721-base      = { workspace = true }
cw-tba          = { workspace = true }
saa             = { workspace = true }

anybuf          = { version = "0.5.0", optional = true }

[dev-dependencies]
p256   = { version = "0.13.2" }
base64 = { version = "0.22.1" }
