[package]
name = "cw82-tba-base"
version     = { workspace = true }
edition     = { workspace = true }
repository  = { workspace = true }
description = "Token Bound Account Base"
authors     = [ "Kromsten <kromsten@megarock.app>" ]

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
name       =  "cw82_tba_base"
crate-type = ["cdylib", "rlib"]

[features]
default          = ["wasm"]
library = []
wasm             = []
cosmwasm         = []
solana          = []
substrate        = []
std            = []


[dependencies]
cosmwasm-std    = { workspace = true }
semver          = { workspace = true }
thiserror       = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-ownable      = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
cw22            = { workspace = true }
cw82            = { workspace = true }
cw83            = { workspace = true }
cw-tba          = { workspace = true, features = [] }
strum           = { workspace = true }
strum_macros    = { workspace = true }
saa-schema      = { workspace = true  }
#smart-account-auth  = { workspace = true, features = ["cosmwasm_1", "cosmos", "session"] }
cw-auths            = { workspace = true }