[package]
name = "cw82-tba-base"
version = { workspace = true }
authors = ["Kromsten <kromsten@megarock.app>"]
edition = { workspace = true }
repository = { workspace = true }
description = "Token Bound Account Base"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
name = "cw82_tba_base"
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
library = []
wasm = []
cosmwasm = []
solana = []
substrate = []
std = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-ownable = { workspace = true }
cw-storage-plus = { workspace = true }
cw-tba = { workspace = true, features = ["full_info"] }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw22 = { workspace = true }
cw82 = { workspace = true }
cw83 = { workspace = true }
cw84 = { workspace = true }
saa-schema = { workspace = true }
saa-wasm = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
smart-account-auth = { workspace = true, features = ["cosmos_arb_addr"] }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
