[package]
name        = "cw82-tba-credentials"
version     = { workspace = true }
edition     = { workspace = true }
repository  = { workspace = true }
authors     = [ "Kromsten <s@noreply.megarock.labs>" ]
description = "Token Bound Account Credentials"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
name       =  "cw82_tba_credentials"
crate-type = ["cdylib", "rlib"]

[features]
archway = []
library = []


[dependencies]
semver          = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw-ownable      = { workspace = true }
cw2             = { workspace = true }
cw22            = { workspace = true }
cw-tba          = { workspace = true, features = ["full_info"] }
anybuf          = { workspace = true }
strum = { workspace = true }
saa-wasm = { workspace = true }

cw82            = { workspace = true }
cw84            = { workspace = true }


[dev-dependencies]
p256   = { version = "0.13.2" }
base64 = { version = "0.22.1" }
