[package]
name = "cw82-tba-credentials"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Token Bound Account Credentials"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
name = "cw82_tba_credentials"
crate-type = ["cdylib", "rlib"]

[features]
library = []
archway = []
omniflix = ["cw-tba/omniflix"]

[dependencies]
anybuf = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-ownable = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw22 = { workspace = true }
saa-wasm = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

cw82 = { workspace = true }
cw84 = { workspace = true }

cw-tba = { path = "../../packages/cw-tba", features = ["full_info"] }
