[package]
name        = "cw83-tba-registry"
version     = { workspace = true }
edition     = { workspace = true }
repository  = { workspace = true }
authors = [ "Kromsten <s@noreply.megarock.labs>" ]
description = "Token Bound Account Registry"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
name       =  "cw83_tba_registry"
crate-type = ["cdylib", "rlib"]

[features]
library             = []
ext_query           = ["cw-tba/ext_query"]


[dependencies]
thiserror           = { workspace = true }
semver              = { workspace = true }
cosmwasm-schema     = { workspace = true }
cosmwasm-std        = { workspace = true }
cw-storage-plus     = { workspace = true }
cw-utils            = { workspace = true }
cw2                 = { workspace = true }
cw22                = { workspace = true }
cw-tba              = { workspace = true }
#smart-account-auth  = { workspace = true }
saa-wasm            = { workspace = true }

cw82                = { workspace = true }
cw84                = { workspace = true }
cw83                = { workspace = true, features = ["multi"] }

