[package]
name = "cw83-tba-registry"
version = { workspace = true }
authors = ["Kromsten <s@noreply.megarock.labs>"]
edition = { workspace = true }
repository = { workspace = true }
description = "Token Bound Account Registry"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
name = "cw83_tba_registry"
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []
omniflix = ["cw-tba/omniflix"]
ext_query = ["cw-tba/ext_query"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-controllers = { workspace = true }
cw-storage-plus = { workspace = true }
cw-tba = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw22 = { workspace = true }
saa-wasm = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

cw82 = { workspace = true }
cw83 = { workspace = true }
cw84 = { workspace = true }
